tests/kyverno-policies/add-annotations/resources.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-paas-pod
  namespace: paas
spec:
  containers:
    - name: nginx
      image: nginx:latest
---
apiVersion: v1
kind: Service
metadata:
  name: test-paas-service
  namespace: paas
spec:
  ports:
  - name: test
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: test
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  name: test-skip
  namespace: user-test
spec:
  containers:
    - name: nginx
      image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: test-skip-webservice
  namespace: webservice
spec:
  containers:
    - name: nginx
      image: nginx:latest
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paas-pass
  namespace: paas
spec:
  rules:
  - host: web.osc.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skip
  namespace: webservice
spec:
  rules:
  - host: foo.osc.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test-dynamo-worker
  namespace: dynamo
  labels:
    nvidia.com/dynamo-discovery-enabled: "true"
spec:
  ports:
  - name: test
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: test
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: test-dynamo-worker-grove
  namespace: dynamo
  labels:
    app.kubernetes.io/managed-by: "grove-operator"
spec:
  ports:
  - name: test
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: test
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: test-frontend-frontend
  namespace: dynamo
  labels:
    nvidia.com/dynamo-discovery-enabled: "true"
spec:
  ports:
  - name: test
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: test
  type: ClusterIP
