tests/kyverno-policies/add-annotations/test-dynamo-service-mutated.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-dynamo-worker
  namespace: dynamo
  labels:
    nvidia.com/dynamo-discovery-enabled: "true"
  annotations:
    prometheus.io/probe_skip: 'true'
spec:
  ports:
  - name: test
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: test
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: test-dynamo-worker-grove
  namespace: dynamo
  labels:
    app.kubernetes.io/managed-by: "grove-operator"
  annotations:
    prometheus.io/probe_skip: 'true'
spec:
  ports:
  - name: test
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: test
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: test-frontend-frontend
  namespace: dynamo
  labels:
    nvidia.com/dynamo-discovery-enabled: "true"
spec:
  ports:
  - name: test
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: test
  type: ClusterIP
