tests/kyverno-policies/add-annotations/test-paas-pod-mutated.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-paas-pod
  namespace: paas
  annotations:
    prometheus.io/scrape: 'false'
spec:
  containers:
    - name: nginx
      image: nginx:latest
