tests/kyverno-policies/add-annotations/test-paas-service-mutated.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-paas-service
  namespace: paas
  annotations:
    prometheus.io/scrape: 'false'
spec:
  ports:
  - name: test
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: test
  type: ClusterIP
