tests/kyverno-policies/add-annotations/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: values
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: add-annotations
    rule: paas-disable-scrape
    resources:
      - test-paas-pod
    patchedResource: test-paas-pod-mutated.yaml
    kind: Pod
    result: pass
  - policy: add-annotations
    rule: paas-disable-scrape
    resources:
      - test-paas-service
    patchedResource: test-paas-service-mutated.yaml
    kind: Service
    result: pass
  - policy: add-annotations
    rule: paas-disable-scrape
    resources:
      - test-skip
      - test-skip-webservice
    kind: Pod
    result: skip
  - policy: add-annotations
    rule: paas-cert-manager
    resources:
      - paas/paas-pass
    patchedResource: test-paas-ingress-mutated.yaml
    kind: Ingress
    result: pass
  - policy: add-annotations
    rule: paas-cert-manager
    resources:
      - webservice/skip
    kind: Ingress
    result: skip
  - policy: add-annotations
    rule: dynamo-disable-probe
    resources:
      - dynamo/test-dynamo-worker
      - dynamo/test-dynamo-worker-grove
    patchedResource: test-dynamo-service-mutated.yaml
    kind: Service
    result: pass
  - policy: add-annotations
    rule: dynamo-disable-probe
    resources:
      - dynamo/test-frontend-frontend
    kind: Service
    result: skip
