tests/kyverno-policies/add-annotations/variables.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
namespaceSelector:
  - name: user-test
    labels:
      foo: bar
  - name: webservice
    labels:
      osc.edu/role: webservice
  - name: paas
    labels:
      osc.edu/role: paas
      osc.edu/service-account: test
      account: test
  - name: dynamo
    labels:
      osc.edu/role: webservice
      osc.edu/service-account: dynamo
      osc.edu/access-dynamo-platform: "true"
